Add provider reloader also should to fix some bugs
