# pkg/pb/api/aoyorouter/docs/api/v1/project.pb.gw.go
@@ -278,6 +278,33 @@ func local_request_AoyoRouterService_GetProvidersList_0(ctx context.Context, mar
 	return msg, metadata, err
 }
 
+func request_AoyoRouterService_ReloadProviders_0(ctx context.Context, marshaler runtime.Marshaler, client AoyoRouterServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq emptypb.Empty
+		metadata runtime.ServerMetadata
+	)
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && !errors.Is(err, io.EOF) {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if req.Body != nil {
+		_, _ = io.Copy(io.Discard, req.Body)
+	}
+	msg, err := client.ReloadProviders(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+}
+
+func local_request_AoyoRouterService_ReloadProviders_0(ctx context.Context, marshaler runtime.Marshaler, server AoyoRouterServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq emptypb.Empty
+		metadata runtime.ServerMetadata
+	)
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && !errors.Is(err, io.EOF) {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	msg, err := server.ReloadProviders(ctx, &protoReq)
+	return msg, metadata, err
+}
+
 func request_AoyoRouterService_UpdateProvider_0(ctx context.Context, marshaler runtime.Marshaler, client AoyoRouterServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var (
 		protoReq UpdateProviderRequest
@@ -919,6 +946,26 @@ func RegisterAoyoRouterServiceHandlerServer(ctx context.Context, mux *runtime.Se
 		}
 		forward_AoyoRouterService_GetProvidersList_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodPost, pattern_AoyoRouterService_ReloadProviders_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/aoyorouter.docs.api.v1.AoyoRouterService/ReloadProviders", runtime.WithHTTPPathPattern("/api/aoyo/v1/providers/reload"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_AoyoRouterService_ReloadProviders_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_AoyoRouterService_ReloadProviders_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 	mux.Handle(http.MethodPatch, pattern_AoyoRouterService_UpdateProvider_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -1355,6 +1402,23 @@ func RegisterAoyoRouterServiceHandlerClient(ctx context.Context, mux *runtime.Se
 		}
 		forward_AoyoRouterService_GetProvidersList_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodPost, pattern_AoyoRouterService_ReloadProviders_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/aoyorouter.docs.api.v1.AoyoRouterService/ReloadProviders", runtime.WithHTTPPathPattern("/api/aoyo/v1/providers/reload"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_AoyoRouterService_ReloadProviders_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_AoyoRouterService_ReloadProviders_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 	mux.Handle(http.MethodPatch, pattern_AoyoRouterService_UpdateProvider_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -1588,6 +1652,7 @@ var (
 	pattern_AoyoRouterService_GetProviderAuthorizationStatus_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3, 2, 4, 1, 0, 4, 1, 5, 5}, []string{"api", "aoyo", "v1", "providers", "authorize", "state"}, ""))
 	pattern_AoyoRouterService_GetProvider_0                    = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3, 1, 0, 4, 1, 5, 4}, []string{"api", "aoyo", "v1", "providers", "provider_id"}, ""))
 	pattern_AoyoRouterService_GetProvidersList_0               = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"api", "aoyo", "v1", "providers"}, ""))
+	pattern_AoyoRouterService_ReloadProviders_0                = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3, 2, 4}, []string{"api", "aoyo", "v1", "providers", "reload"}, ""))
 	pattern_AoyoRouterService_UpdateProvider_0                 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3, 1, 0, 4, 1, 5, 4}, []string{"api", "aoyo", "v1", "providers", "provider_id"}, ""))
 	pattern_AoyoRouterService_DeleteProvider_0                 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3, 1, 0, 4, 1, 5, 4}, []string{"api", "aoyo", "v1", "providers", "provider_id"}, ""))
 	pattern_AoyoRouterService_CreateApiKey_0                   = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"api", "aoyo", "v1", "api-keys"}, ""))
@@ -1612,6 +1677,7 @@ var (
 	forward_AoyoRouterService_GetProviderAuthorizationStatus_0 = runtime.ForwardResponseMessage
 	forward_AoyoRouterService_GetProvider_0                    = runtime.ForwardResponseMessage
 	forward_AoyoRouterService_GetProvidersList_0               = runtime.ForwardResponseMessage
+	forward_AoyoRouterService_ReloadProviders_0                = runtime.ForwardResponseMessage
 	forward_AoyoRouterService_UpdateProvider_0                 = runtime.ForwardResponseMessage
 	forward_AoyoRouterService_DeleteProvider_0                 = runtime.ForwardResponseMessage
 	forward_AoyoRouterService_CreateApiKey_0                   = runtime.ForwardResponseMessage
